Changelog
=========

2.3 LTS (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~~

 * Added support for Django 2.1 (Ryan Verner, Matt Westcott)
 * Added 'scale' image filter (Oliver Wilkerson)
 * Added meta tag to prevent search engines from indexing admin pages (Karl Hobley)
 * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
 * Fix: Respect next param on login (Loic Teixeira)
 * Fix: InlinePanel now handles relations that specify a related_query_name (Aram Dulyan)
 * Fix: before_delete_page / after_delete_page hooks now run within the same database transaction as the page deletion (Tomasz Knapik)
 * Fix: Snippet chooser modal no longer fails on snippet models with UUID primary keys (Sævar Öfjörð Magnússon)
 * Fix: Restored localisation in date/time pickers (David Moore, Thibaud Colas)


2.2.2 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Seek to the beginning of image files when uploading, to restore compatibility with django-storages Google Cloud and Azure backends (Mikalai Radchuk)
 * Fix: Respect next param on login (Loic Teixeira)


2.2.1 (13.08.2018)
~~~~~~~~~~~~~~~~~~

 * Fix: Pin Beautiful Soup to 4.6.0 due to further regressions in formatting empty elements (Matt Westcott)
 * Fix: Prevent AppRegistryNotReady error when wagtail.contrib.sitemaps is in INSTALLED_APPS (Matt Westcott)


2.2 (10.08.2018)
~~~~~~~~~~~~~~~~

 * Added faceted search using the `.facet()` method (Karl Hobley)
 * Added page type filtering and ordering to the Wagtail admin page search (Karl Hobley)
 * Added another valid AudioBoom oEmbed pattern (Bertrand Bordage)
 * Added `annotate_score` support to PostgreSQL search backend (Bertrand Bordage)
 * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
 * JS / CSS media files can now be associated with Draftail feature definitions (Matt Westcott)
 * The `{% slugurl %}` template tag is now site-aware (Samir Shah)